--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "env-cmd": "^10.1.0",
     "express": "^4.17.1",
@@ -23,6 +24,7 @@
     "express-session": "^1.17.1",
     "express-validator": "^6.5.0",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.6.3",
     "mongoose": "^5.9.19",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.8",
